# gen-harness

./: pyproject.toml
gen_harness/: create_connector.py  main.py
gen_harness/resources/: connector.json
