[tool.poetry]
name = "gen-harness"
version = "0.1.0"
description = ""
authors = ["sumitha <sumitha.kurien@gmail.com>"]
readme = "README.md"
packages = [{include = "gen_harness"}]

[tool.poetry.dependencies]
python = "3.11.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
